jjdescription/test/corpus/test.txt
================================================================================
Empty
================================================================================





JJ: This is a comment
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content)))

================================================================================
Simple subject
================================================================================


JJ: This is a comment
JJ:

A change

--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (comment)
  (subject))

================================================================================
Simple subject no NL
================================================================================


JJ: This is a comment
JJ:

A change
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (comment)
  (subject))

================================================================================
Simple subject and body
================================================================================


JJ: This is a comment

A change

These are some lines

that describe the

JJ:

above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject)
  (body_line)
  (body_line)
  (comment)
  (body_line))

================================================================================
Empty subject and body
================================================================================

      

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (subject)
  (body_line)
  (body_line)
  (body_line))

================================================================================
Ignore rest
================================================================================

JJ: describe this change
A Change

These are some lines
that describe the
above change.

JJ: ignore-rest
JJ: heree
foo
JJ: ignore-rest
JJ: Change ID: xyz
bar

baz
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject)
  (body_line)
  (body_line)
  (body_line)
  (ignore_rest
    (rest)))

================================================================================
Subject prefix
================================================================================

JJ: describe this change
feat(some change): this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix unicode
================================================================================

JJ: describe this change
feat(some change)：this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix no scope
================================================================================

JJ: describe this change
feat: this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix unicode no scope
================================================================================

JJ: describe this change
feat：this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix breaking
================================================================================

JJ: describe this change
JJ(foo)!: this is a breaking change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix no scope breaking
================================================================================

JJ: describe this change
JJ!: this is a breaking change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix empty
================================================================================

JJ: describe this change
feat(fo):

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix empty with whitespace
================================================================================

JJ: describe this change
feat: 

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Generated comments
================================================================================

JJ: Fixes #

Foo

JJ: Change ID: vspmyyyr
JJ: This commit contains the following changes:
JJ:     M grammar.js
JJ:     C ./foo bar.txt
JJ:     D   foo.png

--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (subject)
  (generated_comment
    (change_id))
  (comment
    (comment_content))
  (generated_comment
    (filepath))
  (generated_comment
    (filepath))
  (generated_comment
    (filepath)))

================================================================================
Almost generated comments
================================================================================

JJ: Fixes #
JJ:     Mttt

Foo

JJ: Change ID: 
JJ: Change ID: xyzfsx

JJJ:     M grammar.js
JJ: Cha    M grammar.js

--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (comment
    (comment_content))
  (subject)
  (comment
    (comment_content))
  (comment
    (comment_content))
  (body_line)
  (comment
    (comment_content)))

================================================================================
Almost subject prefix
================================================================================

Foo(bar:

Baz(qux): quz

--------------------------------------------------------------------------------

(source
  (subject)
  (body_line))

================================================================================
Almost subject prefix 2
================================================================================

Foo(): bar

Foo

--------------------------------------------------------------------------------

(source
  (subject)
  (body_line))

================================================================================
Almost subject prefix 3
================================================================================

J(J) !: bar

Foo

--------------------------------------------------------------------------------

(source
  (subject)
  (body_line))

================================================================================
Almost subject prefix 4
================================================================================

J(J)! : bar

Foo

--------------------------------------------------------------------------------

(source
  (subject)
  (body_line))

================================================================================
Almost subject prefix 5
================================================================================

J(J)

Foo

--------------------------------------------------------------------------------

(source
  (subject)
  (body_line))

================================================================================
Empty with generated comments
================================================================================

JJ: Fixes #

JJ: Change ID: nlzluzsr
JJ: This commit contains the following changes:
JJ:     M test/corpus/test.txt

--------------------------------------------------------------------------------

(source
  (comment
    (comment_content))
  (generated_comment
    (change_id))
  (comment
    (comment_content))
  (generated_comment
    (filepath)))

================================================================================
Weird 1
================================================================================

J: foo

--------------------------------------------------------------------------------

(source
  (subject
    (prefix
      (type))))

================================================================================
Weird 2
================================================================================

J: foo
J: foo

--------------------------------------------------------------------------------

(source
  (subject
    (prefix
      (type)))
  (body_line))

================================================================================
Weird 3
================================================================================

JJ(foo): bar

--------------------------------------------------------------------------------

(source
  (subject
    (prefix
      (type)
      (scope))))

================================================================================
Weird 4
================================================================================

JJ(foo): bar
JJ(foo): bar

--------------------------------------------------------------------------------

(source
  (subject
    (prefix
      (type)
      (scope)))
  (body_line))

================================================================================
Weird 5
================================================================================

 JJ: bar
JJ(foo): bar

--------------------------------------------------------------------------------

(source
  (subject
    (prefix
      (type)))
  (body_line))

================================================================================
Weird 6
================================================================================

 foo(bar): baz
JJ(foo): bar

--------------------------------------------------------------------------------

(source
  (subject
    (prefix
      (type)
      (scope)))
  (body_line))

================================================================================
Weird 7
================================================================================

J

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Weird 8
================================================================================

 J

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Weird 9
================================================================================

JJ

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Weird 10
================================================================================

  J

--------------------------------------------------------------------------------

(source
  (subject))

================================================================================
Ignore rest
================================================================================

Foo

JJ: ignore-rest
--------------------------------------------------------------------------------

(source
  (subject)
  (ignore_rest))
